--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  cursor: url(https://i.imgur.com/CpdoEln.png),auto;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: "Josefin Slab",serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* $roboto:'Roboto';
+$cursive_font: 'Satisfy';
+$round: 'Varela Round';
+$cta: #fe8033;
+$bg: #272b34;
+$light_bg: #2b3039;
+$text: #2d343e;
+$white: #fff; */
+
+body{
+  width: 100%;
+  height:100%;
+  /* position:relative; */
+  font-family: "Varela Round";
+  background-color: #399494
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.app{
+  /* display: flex; */
+  /* flex-direction: column;
+  width:100%;
+  height:100%;
+  padding: 30px 50px 20px 50px;
+  box-sizing: border-box;
+  background-color: rgb(248, 161, 0) */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
