--- a/client/src/components/styles/Card.module.css
+++ b/client/src/components/styles/Card.module.css
@@ -1,7 +1,7 @@
 .card{
     width: 150px;
     height: 270px;
-    border-radius: 15px;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,12 +13,14 @@
     margin: 30px;
     margin-left: 3px;
     transition: 0.3s ease-in-out;
-    background-color: #cdcdcd
+    background-color: #f1eded;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
    
 }
 
 .card:hover{
     transform:scale(1.1);
+    box-shadow: 4px 4px 4px 1px rgb(0 0 0 / 50%);
 }
 
 .imagen{
@@ -27,13 +29,309 @@
 }
 .imagen:hover{
     box-shadow: 10px;
-    transform:scale(1.15);
+    transform:scale(1.07);
 }
 
 .types{
-    background-color: #dde3e4;
+    display: flex;
+    flex-direction: row;
     border-radius: 15px;
     margin: 1px;
     align-items: center;
     justify-content: center;
+    font-size: 15px;
+}
+
+.type{
+    display: flex;
+    flex-direction: row;
+    background-color: #eb7d7d;
+    border-radius: 15px;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+}
+
+.grass{
+    display: flex;
+    flex-direction: row;
+    background-color: #a4e9a4;
+    border-radius: 3px;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.poison{
+    display: flex;
+    flex-direction: row;
+    background-color: #c26dc2;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    color:rgb(187, 187, 187);
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px;
+}
+
+.fire{
+    display: flex;
+    flex-direction: row;
+    /* background-color: #f29c4b; */
+    background: linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.normal{
+    display: flex;
+    flex-direction: row;
+    background-color: #e8e8e8;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.fighting{
+    display: flex;
+    flex-direction: row;
+    background-color: #ce4800;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.flying{
+    display: flex;
+    flex-direction: row;
+    background-color: #a4b2e9;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.ground{
+    display: flex;
+    flex-direction: row;
+    background-color: #522f01;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+
+}
+
+.rock{
+    display: flex;
+    flex-direction: row;
+    background-color: #6a5234;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.bug{
+    display: flex;
+    flex-direction: row;
+    background-color: #509750;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:rgb(179, 179, 179);
+    box-shadow: 1px 1px 1px;
+
+}
+
+.ghost{
+    display: flex;
+    flex-direction: row;
+    background-color: #632980;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.steel{
+    display: flex;
+    flex-direction: row;
+    background-color: #434343;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+}
+
+.water{
+    display: flex;
+    flex-direction: row;
+    background-color: #857cd5;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:rgb(97, 97, 97);
+    box-shadow: 1px 1px 1px;
+
+}
+
+.electric{
+    display: flex;
+    flex-direction: row;
+    background-color: #f5e500;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.psychic{
+    display: flex;
+    flex-direction: row;
+    background-color: #f858d0;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+}
+
+.ice{
+    display: flex;
+    flex-direction: row;
+    background-color: #a4dbe9;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.dragon{
+    display: flex;
+    flex-direction: row;
+    background-color: #a4e9a4;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.dark{
+    display: flex;
+    flex-direction: row;
+    background-color: #a4e9a4;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+
+}
+
+.unknown{
+    display: flex;
+    flex-direction: row;
+    background-color: #050505;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
+}
+
+.fairy{
+    display: flex;
+    flex-direction: row;
+    background-color: #f294df;
+    margin: 1px 2px 1px 2px;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    padding: 1px 5px 1px 6px;
+    border-radius: 3px;
+    color:gray;
+    box-shadow: 1px 1px 1px;
 }
