--- a/client/src/components/styles/Detail.module.css
+++ b/client/src/components/styles/Detail.module.css
@@ -2,8 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column-reverse;
-  margin: 50px 10px 10px 10px;
+  flex-direction: row;
+  margin: 0vh 28vw 1vh 28vw;
+  height:100vh
+}
+.container1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin: 9vh 28vw 1vh 28vw;
+  background-color: #cdcdcd;
+  padding: 1rem;
+  border-radius: 97px;
 }
 
 h1{
@@ -14,8 +25,10 @@ h1{
 .types{
   display: flex;
   flex-direction: row;
-  margin:5px;
+  margin: 5px;
+  align-content: center;
   color: #fff;
+  justify-content: center;
 }
 
 .type{
@@ -23,5 +36,318 @@ margin-left:5px;
 }
 
 p{
-  color: #fff;
+  color:gray;
+  font-size: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 1px 2px 1px 2px;
+}
+
+.data{
+ 
+  background-color: #ebebeb;
+  border-radius: 3px;
+  margin: 1px 2px 1px 2px;
+ 
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.image{
+  background-size: 1vw 1vw;
+ border-radius: 10071px;
+ height: 30vh;
+ width: 12vw;
+} 
+
+label{
+  font-size:15px;
+}
+
+
+.grass{
+  display: flex;
+  flex-direction: row;
+  background-color: #a4e9a4;
+  border-radius: 3px;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.poison{
+  display: flex;
+  flex-direction: row;
+  background-color: #c26dc2;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  color:gray;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px;
+}
+
+.fire{
+  display: flex;
+  flex-direction: row;
+  /* background-color: #f29c4b; */
+  background: linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.normal{
+  display: flex;
+  flex-direction: row;
+  background-color: #e8e8e8;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.fighting{
+  display: flex;
+  flex-direction: row;
+  background-color: #ce4800;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.flying{
+  display: flex;
+  flex-direction: row;
+  background-color: #a4b2e9;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.ground{
+  display: flex;
+  flex-direction: row;
+  background-color: #522f01;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+
+}
+
+.rock{
+  display: flex;
+  flex-direction: row;
+  background-color: #6a5234;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.bug{
+  display: flex;
+  flex-direction: row;
+  background-color: #509750;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:rgb(170, 170, 170);
+  box-shadow: 1px 1px 1px;
+
+}
+
+.ghost{
+  display: flex;
+  flex-direction: row;
+  background-color: #632980;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.steel{
+  display: flex;
+  flex-direction: row;
+  background-color: #434343;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+}
+
+.water{
+  display: flex;
+  flex-direction: row;
+  background-color: #857cd5;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.electric{
+  display: flex;
+  flex-direction: row;
+  background-color: #f5e500;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.psychic{
+  display: flex;
+  flex-direction: row;
+  background-color: #f858d0;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+}
+
+.ice{
+  display: flex;
+  flex-direction: row;
+  background-color: #a4dbe9;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.dragon{
+  display: flex;
+  flex-direction: row;
+  background-color: #a4e9a4;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.dark{
+  display: flex;
+  flex-direction: row;
+  background-color: #a4e9a4;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+
+}
+
+.unknown{
+  display: flex;
+  flex-direction: row;
+  background-color: #050505;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
+}
+
+.fairy{
+  display: flex;
+  flex-direction: row;
+  background-color: #f294df;
+  margin: 1px 2px 1px 2px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  padding: 1px 5px 1px 6px;
+  border-radius: 3px;
+  color:gray;
+  box-shadow: 1px 1px 1px;
 }
