--- a/client/src/components/styles/Header.module.css
+++ b/client/src/components/styles/Header.module.css
@@ -1,10 +1,15 @@
 nav{
     display: flex;
     justify-content: space-around;
-    align-items:center;
-    width: 100%;
+    align-items: center;
+    width: 7%;
     color: rgb(255, 255, 255);
-    margin-bottom: 11px;
+    margin-bottom: 0px;
+    position: fixed;
+    height: 36vh;
+    margin-right: 0px;
+    margin-left: -2px;
+    
 }
 /* Buscar cambiar css logo? nose  */
 .logo{ 
@@ -33,8 +38,13 @@ li{
     cursor: pointer;
 }
 
-.searchBar{
-color: #fff;
-cursor: pointer;
- 
+.nav{
+        /* padding-left: 150px; */
+    /* padding-right: 150px; */
+    background-color: #62d5b4;
+    margin-left: 21vw;
+    /* margin-right: -87px; */
+    width: 56vw;
+    border-radius: 15px;
+    height: 8vh;
 }
