--- a/client/src/components/styles/Home.module.css
+++ b/client/src/components/styles/Home.module.css
@@ -44,7 +44,7 @@
     align-items:center;
     position: absolute;
     width: 80%;
-    height: 100%;
+    height: 95%;
     margin: 0px auto;
     padding-left: 120px;
     /* box-sizing: border-box; */
@@ -58,11 +58,20 @@
 .filters{
     position: absolute;
     display: flex;
-    flex-direction: column;
-    margin-right: -130px;
+    flex-direction: column-reverse;
+    margin-right: -80px;
+    position:fixed;
+ 
 }
 
 select{
     border-radius: 15px;
-    background-color: #f2fdf9
+    background-color: #f2fdf9;
+    font-size: 15px;
+}
+
+option{
+    
+    font-size: 15px;
+
 }
